hphp/test/slow/as-expression/lvalue-error.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/lvalue-error.php on line 5
